2023-07-16  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* kpsewhich.c: Allow Unicode file name for bibtex8 and bibtexu
	in kpsewhich. (Windows only)
	* texmf.cnf: Update comment.

2023-04-11  Karl Berry  <karl@tug.org>

	* texmf.cnf: doc; explicitly mention that all the texmf trees need
	to follow the TDS.

2023-03-09  Karl Berry  <karl@tug.org>

	* TL'23 release.

2023-02-19  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* texmf.cnf (BIBINPUTS.bibtexu, BSTINPUTS.bibtexu):
	New definition for BibTeXu which can import Japanese inputs
	for pBibTeX in UTF-8.

2023-02-18  Karl Berry  <karl@tug.org>

	* texmf.cnf (TEXMFVAR, TEXMFCONFIG, doc): 2023.

2023-02-09  Karl Berry  <karl@freefriends.org>

	* version.ac (kpse_dev): no more /dev.
	* NEWS,
	* doc/kpathsea.texi,
	* kpsewhich.c,
	* texmf.cnf: copyright 2023.

2022-12-20  Karl Berry  <karl@freefriends.org>

	* doc/kpathsea.texi (Supported file formats): add .lua (LUAINPUTS).
	Report from Werner Lemberg.

2022-11-05  Sam James  <sam@gentoo.org>

	* configure.ac (Ghostscript version): #include <stdlib.h>
	to declare exit and placate clang16.
	https://tug.org/pipermail/tlbuild/2022q4/005269.html

2022-06-12  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* texmf.cnf (guess_input_kanji_encoding):
	Support guessing input file encodings for unix-like platforms.
	(It has already been supported on Windows.)
	Now we set default on for (e)p(la)tex, pbibtex & mendex.
	https://github.com/texjporg/tex-jp-build/issues/142

2022-05-06  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* texmf.cnf (max_print_line):
	Now it applies to BibTeX family:
	bibtex, pbibtex, upbibtex, bibtex8 and bibtexu.

2022-03-21  Karl Berry  <karl@tug.org>

	* TL'22 release.

2022-03-05  Karl Berry  <karl@freefriends.org>

	* texmf.cnf (TEXINPUTS.hi*tex): new entries.

2022-02-27  Karl Berry  <karl@tug.org>

	* texmf.cnf (nest_size): 500 -> 1000.
	(param_size): 10000 -> 20000.
	(stack_size): 5000 -> 10000.
	For stex (ctan.org/pkg/stex), although they also double main_memory